crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT schema_to_xml('testxmlschema', true, false, '');"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    FuncCall@7..53
      Ident@7..20 "schema_to_xml"
      Ascii40@20..21 "("
      AConst@21..36
        Sconst@21..36 "'testxmlschema'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..42
        TrueP@38..42 "true"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..49
        FalseP@44..49 "false"
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..53
        Sconst@51..53 "''"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

