crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT schema_to_xmlschema('testxmlschema', true, false, '');"
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    FuncCall@7..59
      Ident@7..26 "schema_to_xmlschema"
      Ascii40@26..27 "("
      AConst@27..42
        Sconst@27..42 "'testxmlschema'"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..48
        TrueP@44..48 "true"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..55
        FalseP@50..55 "false"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..59
        Sconst@57..59 "''"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

