crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT schema_to_xml_and_xmlschema('testxmlschema', true, true, 'foo');"
---
SelectStmt@0..71
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..69
    FuncCall@7..69
      Ident@7..34 "schema_to_xml_and_xml ..."
      Ascii40@34..35 "("
      AConst@35..50
        Sconst@35..50 "'testxmlschema'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..56
        TrueP@52..56 "true"
      Ascii44@56..57 ","
      Whitespace@57..58 " "
      AConst@58..62
        TrueP@58..62 "true"
      Ascii44@62..63 ","
      Whitespace@63..64 " "
      AConst@64..69
        Sconst@64..69 "'foo'"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

