crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT xmlforest(c1, c2, c3, c4) FROM testxmlschema.test3;"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    XmlExpr@7..31
      Xmlforest@7..16 "xmlforest"
      Ascii40@16..17 "("
      ResTarget@17..19
        ColumnRef@17..19
          Ident@17..19 "c1"
      Ascii44@19..20 ","
      Whitespace@20..21 " "
      ResTarget@21..23
        ColumnRef@21..23
          Ident@21..23 "c2"
      Ascii44@23..24 ","
      Whitespace@24..25 " "
      ResTarget@25..27
        ColumnRef@25..27
          Ident@25..27 "c3"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      ResTarget@29..31
        ColumnRef@29..31
          Ident@29..31 "c4"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  From@33..37 "FROM"
  Whitespace@37..38 " "
  RangeVar@38..57
    Ident@38..51 "testxmlschema"
    Ascii46@51..52 "."
    Ident@52..57 "test3"
  Ascii59@57..58 ";"

