crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO testxmlschema.test2 VALUES (55, 'abc', 'def',\n    98.6, 2, 999, 0,\n    '21:07', '21:11 +05', '2009-06-08 21:07:30', '2009-06-08 21:07:30 -07', '2009-06-08',\n    NULL, 'ABC', true, 'XYZ');"
---
InsertStmt@0..199
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..25 "testxmlschema"
    Ascii46@25..26 "."
    Ident@26..31 "test2"
  Whitespace@31..32 " "
  SelectStmt@32..197
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..197
      AConst@40..42
        Iconst@40..42 "55"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..49
        Sconst@44..49 "'abc'"
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..56
        Sconst@51..56 "'def'"
      Ascii44@56..57 ","
      Newline@57..58 "\n"
      Whitespace@58..62 "    "
      AConst@62..66
        Fconst@62..66 "98.6"
      Ascii44@66..67 ","
      Whitespace@67..68 " "
      AConst@68..69
        Iconst@68..69 "2"
      Ascii44@69..70 ","
      Whitespace@70..71 " "
      AConst@71..74
        Iconst@71..74 "999"
      Ascii44@74..75 ","
      Whitespace@75..76 " "
      AConst@76..77
        Iconst@76..77 "0"
      Ascii44@77..78 ","
      Newline@78..79 "\n"
      Whitespace@79..83 "    "
      AConst@83..90
        Sconst@83..90 "'21:07'"
      Ascii44@90..91 ","
      Whitespace@91..92 " "
      AConst@92..103
        Sconst@92..103 "'21:11 +05'"
      Ascii44@103..104 ","
      Whitespace@104..105 " "
      AConst@105..126
        Sconst@105..126 "'2009-06-08 21:07:30'"
      Ascii44@126..127 ","
      Whitespace@127..128 " "
      AConst@128..153
        Sconst@128..153 "'2009-06-08 21:07:30  ..."
      Ascii44@153..154 ","
      Whitespace@154..155 " "
      AConst@155..167
        Sconst@155..167 "'2009-06-08'"
      Ascii44@167..168 ","
      Newline@168..169 "\n"
      Whitespace@169..173 "    "
      AConst@173..177
        NullP@173..177 "NULL"
      Ascii44@177..178 ","
      Whitespace@178..179 " "
      AConst@179..184
        Sconst@179..184 "'ABC'"
      Ascii44@184..185 ","
      Whitespace@185..186 " "
      AConst@186..190
        TrueP@186..190 "true"
      Ascii44@190..191 ","
      Whitespace@191..192 " "
      AConst@192..197
        Sconst@192..197 "'XYZ'"
  Ascii41@197..198 ")"
  Ascii59@198..199 ";"

