crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT table_to_xml('testxmlschema.test1', false, false, '');"
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    FuncCall@7..59
      Ident@7..19 "table_to_xml"
      Ascii40@19..20 "("
      AConst@20..41
        Sconst@20..41 "'testxmlschema.test1'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..48
        FalseP@43..48 "false"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..55
        FalseP@50..55 "false"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..59
        Sconst@57..59 "''"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

